--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TestInterface.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestInterface.data.gz",
-        frameworkUrl: buildUrl + "/TestInterface.framework.js.gz",
-        codeUrl: buildUrl + "/TestInterface.wasm.gz",
+        dataUrl: buildUrl + "/TestInterface.data.unityweb",
+        frameworkUrl: buildUrl + "/TestInterface.framework.js.unityweb",
+        codeUrl: buildUrl + "/TestInterface.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TestInterface",
